agregar lista de productos y resumen del dia

--- a/src/app/components/modal-confirmation/modal-confirmation.component.html
+++ b/src/app/components/modal-confirmation/modal-confirmation.component.html
@@ -17,10 +17,10 @@
         </div>
         <div class="row">
           <div class="col-auto ms-5">
-            <button class="btn btn-success d-block" (click)="correcto()">Es correcto</button>
+            <button class="btn btn-success d-block" (click)="success()">Es correcto</button>
           </div>
           <div class="col-auto ">
-            <button class="btn btn-danger d-block" (click)="this.modalinfo.hide()">Cancelar</button>
+            <button class="btn btn-danger d-block" (click)="cancelOperation()">Cancelar</button>
           </div>
         </div>
       </div>
