--- a/src/app/layout/nadvar/nadvar.component.html
+++ b/src/app/layout/nadvar/nadvar.component.html
@@ -15,6 +15,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/summary-day">Resumen del dia</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/insert-product">Agregar Productos</a>
+          </li>
+         
         </ul>
       </div>
     </div>
