--- a/src/app/components/button-product/button-product.component.html
+++ b/src/app/components/button-product/button-product.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-icon-only">
-    <h4 class="text-white">{{productButton}}</h4>
-</button>
+<button type="button" class="btn btn-icon-only " (click)="showKeyboard()"> 
+    <h4 class="text-white" >{{productButton}}</h4>
+</button> 
