--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,3 @@
-<div class="container p-5">
-  <app-keyboard [productButton]="'Pollo'"></app-keyboard>
-  
-  <app-keyboard [productButton]="'Arroz'"></app-keyboard>
-
-  <app-keyboard [productButton]="'Papas'"></app-keyboard>
-
-  <app-keyboard [productButton]="'Mole'"></app-keyboard>
-
+<div class="container p-5 bg-cover" *ngFor="let item of listProduct" style="background-image: url('/assets/images/450_1000.jpg');">>
+  <app-keyboard [productButton]="item.name" [price]="item.price"></app-keyboard>
 </div>
