--- a/src/app/pages/list-product/list-product.component.html
+++ b/src/app/pages/list-product/list-product.component.html
@@ -1,4 +1,3 @@
-<div class="container">
-    <app-table [summaryDay]="summaryDay"></app-table>
-   </div>
-   
+<div class="container"  >
+    <app-table [summaryDay]="summaryDay" [showUpdate]="showUpdate"></app-table>
+</div>
