--- a/src/app/components/keyboard/keyboard.component.html
+++ b/src/app/components/keyboard/keyboard.component.html
@@ -1,12 +1,34 @@
+<div class="row justify-content-between d-flex flex-wrap text-center mb-1 d-block d-sm-none mb-3">
+  <div class="col-4">
+    <div class="card h-100" style="background-color:orangered;">
+      <div class="card-body d-flex justify-content-center">
+       <app-button-product [productButton]= productButton  (show)="showKeyboard($event)"></app-button-product>
+      </div>
+    </div>
+  </div>
+  <div class="col-3  d-flex align-items-center" *ngIf="show">
+    <div class="card h-100 bs-info-border-subtle" >
+      <div class="card-body d-flex justify-content-center">
+        <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberHaftth()">
+          <p class="text-black">.5</p>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="col-auto  d-flex align-items-center" *ngIf="show">
+    <div class="border p-4 bg-white d-block d-sm-none">M:{{numberTotal && price? numberTotal * price : 0}}</div>
+  </div>
+</div>  
+
 <div class="row justify-content-between d-flex flex-wrap text-center mb-1">
-    <div class="col-3 col-md-6 align-items-center">
+    <div class="col-3 col-md-6 align-items-center  d-none d-md-block">
       <div class="card h-100" style="background-color:orangered;">
         <div class="card-body d-flex justify-content-center">
          <app-button-product [productButton]= productButton  (show)="showKeyboard($event)"></app-button-product>
         </div>
       </div>
     </div>
-    <div class="col-3 col-md-auto align-items-center" *ngIf="show" >
+    <div class="col-3 col-md-auto align-items-center" *ngIf="show">
       <div class="card h-100 bs-info-border-subtle"> 
         <div class="card-body d-flex justify-content-center">
           <button type="button" class="btn btn-icon-only cursor-pointer touch-action: manipulation" (click)="numberFirst()">
@@ -36,8 +58,8 @@
   </div>
 
   <div class="row justify-content-between d-flex flex-wrap text-center mb-1" *ngIf="show">
-    <div class="col-3 col-md-6 d-flex align-items-center">
-      <div class="border p-4 bg-white">M:{{numberTotal && price? numberTotal * price : 0}}</div>
+    <div class="col-3 col-md-6 d-flex align-items-center  d-none d-md-block">
+      <div class="border p-4 bg-white d-none d-md-block">M:{{numberTotal && price? numberTotal * price : 0}}</div>
     </div>
     <div class="col-3 col-md-auto align-items-center">
       <div class="card h-100 bs-info-border-subtle" >
@@ -69,8 +91,14 @@
   </div>
 
   <div class="row justify-content-between d-flex flex-wrap text-center mb-1" *ngIf="show">
-    <div class="col-3 col-md-6 align-items-center">
-     
+    <div class="col-3 col-md-6 align-items-center  d-none d-md-block">
+        <div class="card h-100 bs-info-border-subtle  text-truncate" >
+          <div class="card-body d-flex justify-content-center">
+            <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberHaftth()">
+              <h6 class="text-black">Medio</h6>
+            </button>
+          </div>
+        </div>
     </div>
     <div class="col-3 col-md-auto  align-items-center">
       <div class="card h-100 bs-info-border-subtle" >
@@ -102,8 +130,8 @@
   </div>
 
   <div class="row justify-content-between d-flex flex-wrap text-center mb-1 align-items-center" *ngIf="show">
-    <div class="col-3 col-md-6"></div>
-    <div class="col-3 col-md-3 align-items-center">
+    <div class="col-auto col-md-6 d-none d-md-block"></div>
+    <div class="col-3 col-md-auto align-items-center">
       <div class="card h-100 bs-info-border-subtle" >
         <div class="card-body d-flex justify-content-center">
           <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberCeroth()">
@@ -112,7 +140,10 @@
         </div>
       </div>
     </div>
+    <div class="col-3 col-md-auto align-items-center">
+    </div>
     <div class="col-6 col-md-auto align-items-center">
-      <app-modal-confirmation (emptyBox)="onEmptyBox($event)" (totalNumberChange)="ontotalNumberChange($event)" [numberTotal]="numberTotal" [product]="productButton" [price]="price" ></app-modal-confirmation>
+      <app-modal-confirmation (emptyBox)="onEmptyBox($event)" (numberTotalEmit)="ontotalNumberEmit($event)" (priceEmit)="onpriceEmit($event)" [numberTotal]="numberTotal" [product]="productButton" [price]="price" ></app-modal-confirmation>
     </div>
   </div>
+  
