--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,165 @@
-<div class="container p-5 bg-cover" *ngFor="let item of listProduct" style="background-image: url('/assets/images/450_1000.jpg');">>
-  <app-keyboard [productButton]="item.name" [price]="item.price"></app-keyboard>
+<div style="background-image: url('/assets/images/450_1000.jpg');">
+  <div class="container p-5 bg-cover" *ngFor="let item of listProduct">
+    <app-keyboard [productButton]="item.name" [price]="item.price" (numberTotalEmit)="ontotalNumberEmit($event)" (priceEmit)="onpriceEmit($event)"></app-keyboard>
+  </div>
+  <div class="row p-2">
+    <div class="col-8"></div>
+    <div class="col-3">
+      <div class="card">
+        <div class="card-body">
+         Total:
+        </div>
+       </div>
+    </div>
+   </div>
 </div>
+
+
+ <div class="modal fade" #modalInfoChange tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content" >
+     <div class="modal-body" >
+      <div class="row align-items-center justify-content-between">
+        <div class="col-9">
+        <h5 class="modal-title text-black" id="exampleModalLabel">Monto con el que paga</h5>
+        </div>
+      </div>
+      <div class="container p-5 bg-cover"  style="background-image: url('/assets/images/450_1000.jpg');">
+        <div class="row justify-content-between d-flex mb-3 d-block d-sm-none">
+          <div class="col-auto">
+            <div class="border p-4 bg-white ">M:{{numberTotalChange ? numberTotalChange : 0}} </div>
+          </div>
+          <div class="col-auto">
+            <div class="border p-4 bg-white">D:{{numberTotal && numberTotalChange && price ? numberTotalChange - (numberTotal * price) : 0}}</div>
+          </div>
+        </div>
+
+        <div class="row justify-content-between d-flex flex-wrap text-center mb-1 ">
+          <div class="col-3 col-md-3 d-flex align-items-center d-none d-md-block">
+            <div class="border h-100  p-4 bg-white ">M:{{numberTotalChange ? numberTotalChange : 0}} </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center"  >
+            <div class="card h-100  bs-info-border-subtle"> 
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer touch-action: manipulation" (click)="numberFirst()">
+                  <h6 class="text-black">1</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center" >
+            <div class="card h-100 bs-info-border-subtle">
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberSecond()">
+                  <h6 class="text-black">2</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center" >
+            <div class="card h-100 bs-info-border-subtle">
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberFiveth()">
+                  <h6 class="text-black">5</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="row justify-content-between d-flex flex-wrap text-center mb-1" >
+          <div class="col-3 col-md-3 d-flex align-items-center d-none d-md-block">
+            <div class="card border h-100 p-4 bg-white">D:{{numberTotal && numberTotalChange && price ? numberTotalChange - (numberTotal * price) : 0}}</div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberTenth()">
+                  <h6 class="text-black">10</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto col-sm-1 align-items-center">
+            <div class="card  h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberTwentyth()">
+                  <h6 class="text-black">20</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberFiftyth()">
+                  <h6 class="text-black">50</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="row justify-content-between align-items-center d-flex flex-wrap text-center mb-1" >
+          <div class="col-3 col-md-3 align-items-center d-none d-md-block">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberthousandth()">
+                  <h6 class="text-black">1000</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto  align-items-center">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberOnehoundrateth()">
+                  <h6 class="text-black">100</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberTwohoundrateth()">
+                  <h6 class="text-black">200</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto align-items-center">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberFivehoundrateth()">
+                  <h6 class="text-black">500</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="row justify-content-between d-flex flex-wrap text-center mb-1 align-items-center" >
+          <div class="col-3 col-md-auto d-none d-md-block">
+          </div>
+          <div class="col-3 col-md-auto align-items-center d-block d-sm-none ">
+            <div class="card h-100 bs-info-border-subtle" >
+              <div class="card-body d-flex justify-content-center">
+                <button type="button" class="btn btn-icon-only cursor-pointer" (click)="numberthousandth()">
+                  <h6 class="text-black">1000</h6>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-auto d-flex align-items-center">
+              <button class="btn btn-success d-block" (click)="handOutChange()">Es correcto</button>
+          </div>
+          <div class="col-3 col-md-auto d-flex align-items-center">
+            <button class="btn btn-danger d-block" (click)="handOutChangeCancel()">Es cancelar</button>
+         </div>
+        </div>
+      </div>
+     </div>
+    </div>
+  </div> 
+</div> 
